[package]
name = "acsproxy"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1"
azure_core = { version = "0.20.0", default-features = false, features = ["enable_reqwest_rustls"] }
azure_identity = { version = "0.20.0", default-features = false, features = ["enable_reqwest_rustls"] }
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
figment = { git = "https://github.com/SergioBenitez/Figment.git", version = "0.10.19", features = ["toml", "env"] }
mail-parser = "0.11.1"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["macros", "process", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
url = "2.5.7"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
indoc = "2.0.7"
